--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
 
       <h1><a href="index.html">Viral Parmar</a></h1>
-      <h2>I'm Cyber Security <span>Consultant</span> from भारत</h2>
+      <h2>I'm Cyber Security <span>Engineer</span> from भारत</h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
