--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <img src="img/Viral.jpeg" class="img-fluid" alt="Viral Parmar">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Cyber Security Consultant</h3>
+          <h3>Security Engineer</h3>
           <p class="font-italic">
-            Highly motivated CEH professional with 3+ years of experience, exceeding expectations by slashing vulnerabilities by 99% across 10,000+ systems. Deliver high-quality security assessments and actionable recommendations, boasting a 90% success rate in improving system security and efficiency. This relentless pursuit of knowledge extends to bug hunting and security research, where I contribute to a safer digital landscape by uncovering previously unknown weaknesses.
+            Highly motivated Security professional with 4+ years of experience, exceeding expectations by slashing vulnerabilities by 90% across system, server and network. Deliver high-quality security assessments and actionable recommendations, boasting a 98% success rate in improving system security and efficiency. This relentless pursuit of knowledge extends to bug hunting and security research, where I contribute to a safer digital landscape by uncovering previously unknown weaknesses.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -94,46 +94,12 @@
             </div>
           </div>
           <p>
-           Honed skills through participation in Capture the Flag (CTF) competitions, achieving top 1% ranking on TryHackMe and HackerRank on HackTheBox, demonstrating advanced penetration testing capabilities.
+           Honed skills through participation in Capture the Flag (CTF) competitions, achieving top 1% ranking on TryHackMe and HackTheBox.
           </p>
         </div>
       </div>
 
     </div><!-- End About Me -->
-
-    <!-- ======= Skills  ======= -->
-    <div class="skills container">
-
-      <div class="section-title">
-        <h2>Skills</h2>
-      </div>
-
-      <div class="row skills-content">
-
-        <div class="col-lg-6">
-        <div class="progress">
-            <span class="skill">CTF</span>
-          </div>
-
-           <div class="progress">
-            <span class="skill">Configuration audit</span>
-          </div>
-        </div>
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">Linux and Shell</span>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Risk Assessment</span>
-          </div>
-        </div>
-
-      </div>
-
-    </div><!-- End Skills -->
 
     <!-- ======= Interests ======= -->
     <div class="interests container">
