--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
+  
+  Add this to certification
+  UC - Threat Hunt Reports - https://learn.justhacking.com/completion/d7e5fc517cb13b1d 
   ======================================================== -->
 </head>
 
